fix align-content to align-items center

--- a/css/components/card-header.css
+++ b/css/components/card-header.css
@@ -1,5 +1,5 @@
 .card-header {
     display: flex;
-    align-content: center;
+    align-items: center;
     justify-content: space-between;
 }
